fix: change event dispatcher dependency injection logic and entites strucuture to be compliant with migrations
