# backend/internal/infra/web/handler/prediction_handlers.go
@@ -68,11 +68,11 @@ func (h *PredictionHandlers) CreatePredictionHandler(c *gin.Context) {
 // @Router /predictions/{id} [get]
 func (h *PredictionHandlers) FindPredictionByIdHandler(c *gin.Context) {
 	var input prediction_usecase.FindPredictionByIdInputDTO
-	id, err := uuid.Parse(c.Param("id"))
+	predictionId, err := uuid.Parse(c.Param("prediction_id"))
 	if err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 	}
-	input.Id = id
+	input.PredictionId = predictionId
 
 	ctx := context.Background()
 	ctx = context.WithValue(ctx, "limit", c.DefaultQuery("limit", "20"))
@@ -96,11 +96,11 @@ func (h *PredictionHandlers) FindPredictionByIdHandler(c *gin.Context) {
 // @Router /predictions/location/{id} [get]
 func (h *PredictionHandlers) FindAllPredictionsByLocationIdHandler(c *gin.Context) {
 	var input prediction_usecase.FindAllPredictionsByLocationIdInputDTO
-	id, err := uuid.Parse(c.Param("id"))
+	locationId, err := uuid.Parse(c.Param("location_id"))
 	if err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 	}
-	input.LocationId = id
+	input.LocationId = locationId
 	ctx := context.Background()
 	ctx = context.WithValue(ctx, "limit", c.DefaultQuery("limit", "20"))
 	ctx = context.WithValue(ctx, "offset", c.DefaultQuery("offset", "0"))
@@ -148,11 +148,11 @@ func (h *PredictionHandlers) UpdatePredictionHandler(c *gin.Context) {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
-	id, err := uuid.Parse(c.Param("id"))
+	predictionId, err := uuid.Parse(c.Param("prediction_id"))
 	if err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 	}
-	input.Id = id
+	input.PredictionId = predictionId
 	ctx := context.Background()
 	res, err := prediction_usecase.NewUpdatePredictionUseCase(h.PredictionRepository).Execute(ctx, input)
 	if err != nil {
@@ -173,11 +173,11 @@ func (h *PredictionHandlers) UpdatePredictionHandler(c *gin.Context) {
 // @Router /predictions/{id} [delete]
 func (h *PredictionHandlers) DeletePredictionHandler(c *gin.Context) {
 	var input prediction_usecase.DeletePredictionInputDTO
-	id, err := uuid.Parse(c.Param("id"))
+	predictionId, err := uuid.Parse(c.Param("prediction_id"))
 	if err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 	}
-	input.Id = id
+	input.PredictionId = predictionId
 	ctx := context.Background()
 	err = prediction_usecase.NewDeletePredictionUseCase(h.PredictionRepository).Execute(ctx, input)
 	if err != nil {
