# backend/internal/usecase/location_usecase/location_dto.go
@@ -1,9 +1,9 @@
 package location_usecase
 
 import (
-	"time"
 	"github.com/Inteli-College/2024-2A-T02-EC11-G01/internal/usecase/prediction_usecase"
 	"github.com/google/uuid"
+	"time"
 )
 
 type CreateLocationInputDTO struct {
@@ -13,19 +13,19 @@ type CreateLocationInputDTO struct {
 }
 
 type FindLocationByIdInputDTO struct {
-	Id uuid.UUID `json:"id"`
+	LocationId uuid.UUID `json:"location_id"`
 }
 
 type CreateLocationOutputDTO struct {
-	Id        uuid.UUID `json:"id"`
-	Name      string    `json:"name"`
-	Latitude  string    `json:"latitude"`
-	Longitude string    `json:"longitude"`
-	CreatedAt time.Time `json:"created_at"`
+	LocationId uuid.UUID `json:"location_id"`
+	Name       string    `json:"name"`
+	Latitude   string    `json:"latitude"`
+	Longitude  string    `json:"longitude"`
+	CreatedAt  time.Time `json:"created_at"`
 }
 
 type FindLocationOutputDTO struct {
-	Id          uuid.UUID                                     `json:"id"`
+	LocationId  uuid.UUID                                     `json:"location_id"`
 	Name        string                                        `json:"name"`
 	Latitude    string                                        `json:"latitude"`
 	Longitude   string                                        `json:"longitude"`
@@ -35,23 +35,23 @@ type FindLocationOutputDTO struct {
 }
 
 type UpdateLocationInputDTO struct {
-	Id        uuid.UUID `json:"id"`
-	Name      string    `json:"name"`
-	Latitude  string    `json:"latitude"`
-	Longitude string    `json:"longitude"`
+	LocationId uuid.UUID `json:"location_id"`
+	Name       string    `json:"name"`
+	Latitude   string    `json:"latitude"`
+	Longitude  string    `json:"longitude"`
 }
 
 type FindAllLocationsOutputDTO []*FindLocationOutputDTO
 
 type UpdateLocationOutputDTO struct {
-	Id        uuid.UUID `json:"id"`
-	Name      string    `json:"name"`
-	Latitude  string    `json:"latitude"`
-	Longitude string    `json:"longitude"`
-	CreatedAt time.Time `json:"created_at"`
-	UpdatedAt time.Time `json:"updated_at"`
+	LocationId uuid.UUID `json:"location_id"`
+	Name       string    `json:"name"`
+	Latitude   string    `json:"latitude"`
+	Longitude  string    `json:"longitude"`
+	CreatedAt  time.Time `json:"created_at"`
+	UpdatedAt  time.Time `json:"updated_at"`
 }
 
 type DeleteLocationInputDTO struct {
-	Id uuid.UUID `json:"id"`
+	LocationId uuid.UUID `json:"location_id"`
 }
