# backend/internal/usecase/prediction_usecase/prediction_dto.go
@@ -7,14 +7,14 @@ import (
 )
 
 type CreatePredictionInputDTO struct {
-	RawImage       string    `json:"raw_image"`
-	AnnotatedImage string    `json:"annotated_image"`
-	Detections     uint      `json:"detections"`
-	LocationId     uuid.UUID `json:"location_id"`
+	RawImagePath       string    `json:"raw_image_path"`
+	AnnotatedImagePath string    `json:"annotated_image_path"`
+	Detections         uint      `json:"detections"`
+	LocationId         uuid.UUID `json:"location_id"`
 }
 
 type FindPredictionByIdInputDTO struct {
-	Id uuid.UUID `json:"id"`
+	PredictionId uuid.UUID `json:"prediction_id"`
 }
 
 type FindAllPredictionsByLocationIdInputDTO struct {
@@ -22,35 +22,34 @@ type FindAllPredictionsByLocationIdInputDTO struct {
 }
 
 type UpdatePredictionInputDTO struct {
-	Id             uuid.UUID `json:"id"`
-	RawImage       string    `json:"raw_image"`
-	AnnotatedImage string    `json:"annotated_image"`
-	Detections     uint      `json:"detections"`
-	LocationId     uuid.UUID `json:"location_id"`
+	PredictionId       uuid.UUID `json:"prediction_id"`
+	RawImagePath       string    `json:"raw_image_path"`
+	AnnotatedImagePath string    `json:"annotated_image_path"`
+	Detections         uint      `json:"detections"`
+	LocationId         uuid.UUID `json:"location_id"`
 }
 
 type DeletePredictionInputDTO struct {
-	Id uuid.UUID `json:"id"`
+	PredictionId uuid.UUID `json:"prediction_id"`
 }
 
-
 type CreatePredictionOutputDTO struct {
-	Id             uuid.UUID `json:"id"`
-	RawImage       string    `json:"raw_image"`
-	AnnotatedImage string    `json:"annotated_image"`
-	Detections     uint      `json:"detections"`
-	LocationId     uuid.UUID `json:"location_id"`
-	CreatedAt      time.Time `json:"created_at"`
+	PredictionId       uuid.UUID `json:"prediction_id"`
+	RawImagePath       string    `json:"raw_image_path"`
+	AnnotatedImagePath string    `json:"annotated_image_path"`
+	Detections         uint      `json:"detections"`
+	LocationId         uuid.UUID `json:"location_id"`
+	CreatedAt          time.Time `json:"created_at"`
 }
 
 type FindPredictionOutputDTO struct {
-	Id             uuid.UUID `json:"id"`
-	RawImage       string    `json:"raw_image"`
-	AnnotatedImage string    `json:"annotated_image"`
-	Detections     uint      `json:"detections"`
-	LocationId     uuid.UUID `json:"location_id"`
-	CreatedAt      time.Time `json:"created_at"`
-	UpdatedAt      time.Time `json:"updated_at"`
+	PredictionId       uuid.UUID `json:"prediction_id"`
+	RawImagePath       string    `json:"raw_image_path"`
+	AnnotatedImagePath string    `json:"annotated_image_path"`
+	Detections         uint      `json:"detections"`
+	LocationId         uuid.UUID `json:"location_id"`
+	CreatedAt          time.Time `json:"created_at"`
+	UpdatedAt          time.Time `json:"updated_at"`
 }
 
 type FindAllPredictionsOutputDTO []*FindPredictionOutputDTO
@@ -58,37 +57,11 @@ type FindAllPredictionsOutputDTO []*FindPredictionOutputDTO
 type FindAllPredictionsByLocationIdOutputDTO []*FindPredictionOutputDTO
 
 type UpdatePredictionOutputDTO struct {
-	Id             uuid.UUID `json:"id"`
-	RawImage       string    `json:"raw_image"`
-	AnnotatedImage string    `json:"annotated_image"`
-	Detections     uint      `json:"detections"`
-	LocationId     uuid.UUID `json:"location_id"`
-	CreatedAt      time.Time `json:"created_at"`
-	UpdatedAt      time.Time `json:"update_at"`
+	PredictionId       uuid.UUID `json:"prediction_id"`
+	RawImagePath       string    `json:"raw_image_path"`
+	AnnotatedImagePath string    `json:"annotated_image_path"`
+	Detections         uint      `json:"detections"`
+	LocationId         uuid.UUID `json:"location_id"`
+	CreatedAt          time.Time `json:"created_at"`
+	UpdatedAt          time.Time `json:"update_at"`
 }
-
-// type PredictionDTO struct {
-// 	PredictionId    string                 `json:"prediction_id"`
-// 	RawImagePath    string                 `json:"raw_image_path"`
-// 	OutputImagePath string                 `json:"output_image_path"`
-// 	Output          map[string]interface{} `json:"output"`
-// 	LocationId      string                 `json:"location_id"`
-// 	CreatedAt       time.Time              `json:"created_at"`
-// }
-
-// type CreatePredictionInputDTO struct {
-// 	RawImagePath    string                `json:"raw_image_path"`
-// 	OutputImagePath string                `json:"output_image_path"`
-// 	Output          map[string]interface{} `json:"output"`
-// 	LocationId      string                `json:"location_id"`
-// }
-
-// type FindAllPredictionsOutputDTO []*PredictionDTO
-
-// type FindPredictionByIdInputDTO struct {
-// 	PredictionId string `json:"prediction_id"`
-// }
-
-// type FindPredictionByLocationIdInputDTO struct {
-// 	LocationId string `json:"location_id"`
-// }
